--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -10,28 +10,26 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [2.7, 3.7, 3.8, 3.9]
     steps:
       - uses: actions/checkout@v2
-      # Set up Python2.7
-      - name: Set up Python 2.7
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
-          python-version: 2.7
-      - name: Install dependencies
+          python-version: ${{ matrix.python-version }}
+      - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install pipenv
-          pipenv install --dev
-      - name: Test with pytest
+      - name: Run Unit Tests
         run: |
           export PYTHONPATH=:$(pwd):$PYTHONPATH
+          pipenv --python ${{ matrix.python-version }}
+          rm Pipfile.lock
+          pipenv install --dev
           pipenv run pytest -so xfail_strict=True --durations 10 --maxfail 10 --cov ./ --cov-report html --cov-report xml --junitxml test-reports/tests.xml --cov-config=./tests/.coveragerc ./tests/
-      - name: Display Python version
-        run: python -c "import sys; print(sys.version)"
       # Set up posting code coverage to CodeCov.
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
-#        with:
-#          fail_ci_if_error: true
-          # flags: unittests # optional
-          # name: codecov-umbrella # optional
